<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="restaurantObject"
            type="com.talip.lembas.model.Restaurant" />
        <variable
            name="detailFragment"
            type="com.talip.lembas.ui.fragment.ResDetailFragment" />
        <variable
            name="foodAdapter"
            type="com.talip.lembas.ui.adapter.FoodAdapter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resConstraintCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.ResDetailFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sortFloatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/sort_icon" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="410dp"
            android:layout_height="100dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@{restaurantObject.restaurant_name}"
            android:textColor="@color/myYellow"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/search_view_style"
            android:drawableLeft="@drawable/icon_search_view"
            android:hint="@string/searchFood"
            android:textColorHint="@color/hintGrey"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClickListener="@{()->detailFragment.bac()}"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_back_myyellow" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/resDetailResCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curve_toolbar"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="30dp"
                        app:cardCornerRadius="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:visibility="visible">


                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardView"
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginBottom="25dp"
                                app:cardCornerRadius="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageView
                                    android:id="@+id/detailResImage"
                                    android:layout_width="130dp"
                                    android:layout_height="130dp"
                                    tools:srcCompat="@tools:sample/avatars" />
                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:id="@+id/detailResName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/berkshire_swash"
                                android:text="@{restaurantObject.restaurant_name}"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/cardView"
                                app:layout_constraintTop_toTopOf="@+id/cardView" />

                            <RatingBar
                                android:id="@+id/detailRatingBar"
                                style="@style/Widget.AppCompat.RatingBar.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:numStars="5"
                                android:rating="@{restaurantObject.rating}"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/cardView"
                                app:layout_constraintTop_toBottomOf="@+id/detailResName" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"
                                android:text="@string/resMinPrice"
                                android:textColor="@color/hintGrey"
                                android:textSize="10sp"
                                app:layout_constraintBottom_toTopOf="@+id/detailMinPrice"
                                app:layout_constraintEnd_toStartOf="@+id/textView9"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/cardView" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/deliveryTime"
                                android:textColor="@color/hintGrey"
                                android:textSize="10sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/textView8"
                                app:layout_constraintTop_toTopOf="@+id/textView8" />

                            <TextView
                                android:id="@+id/detailMinPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{restaurantObject.min_price+ ` ₺`}"
                                android:textColor="@color/black"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                                app:layout_constraintEnd_toEndOf="@+id/textView8"
                                app:layout_constraintStart_toEndOf="@+id/cardView"
                                app:layout_constraintStart_toStartOf="@+id/textView8" />

                            <TextView
                                android:id="@+id/detailResTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:text="@{restaurantObject.time}"
                                android:textColor="@color/black"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                                app:layout_constraintEnd_toEndOf="@+id/textView9"
                                app:layout_constraintStart_toStartOf="@+id/textView9" />

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:text="@string/minute"
                                android:textColor="@color/black"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                                app:layout_constraintStart_toEndOf="@+id/detailResTime" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/foodRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:adapter="@{foodAdapter}"

                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>